# mainapi/routes/index.js
@@ -1,5 +1,6 @@
 function createRoutes(app) {
-	app.use('/domains', require('./domains'));
+	app.use('/domains', require('./domainsRoute'));
+	app.use('/branches', require('./branchesRoute'));
 }
 
 module.exports = {
